[package]
name = "nquads-syntax"
version = "0.17.0"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "RDF 1.1 N-Quads parser with code mapping metadata"
categories = ["parsing"]
keywords = ["parsing", "rdf", "n-quads", "w3c"]
repository = "https://github.com/timothee-haudebourg/nquads-syntax"
documentation = "https://docs.rs/nquads-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
iref = "3.1"
static-iref = "3.0"
locspan = "0.8"
decoded-char = "0.1.1"
langtag = "0.3"
rdf-types = { version = "0.18", features = ["meta"] }

[dev-dependencies]
codespan-reporting = "0.11.1"
log = "0.4.17"
stderrlog = "0.5.3"